# farming_risk_regions

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
farming_risk_regions/: __init__.py  dataset.py  features.py  plots.py
farming_risk_regions/modeling/: predict.py  train.py
notebooks/: download_insurance_data_am-01.ipynb  download_weather_data_am-01.ipynb  download_yields_am-01.ipynb  exploratory_data_analysis_am-01.ipynb
